# claude-hub

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
include/: AgentKind.hpp  AgentManager.hpp  ClaudeSessionDiscovery.hpp  Constants.hpp  D3D11Context.hpp  FolderPicker.hpp  IActivityProbe.hpp  IAgentDriver.hpp  ImGuiRuntime.hpp  JsonlActivityProbe.hpp  Logger.hpp  MainWindow.hpp  Sidebar.hpp  SpawnConfig.hpp  WaitingFlagWatcher.hpp  WindowsTerminalSpawner.hpp  agent.hpp  agent_manager.hpp  app.hpp  config.hpp  conpty.hpp  gui.hpp  input_detector.hpp  input_handler.hpp  renderer.hpp  terminal_buffer.hpp  vt_parser.hpp
include/detail/: JsonlParsing.hpp
installer/: agents-hub.iss  build-installer.ps1
scripts/: claude_hub_notify.ps1
src/: Agent.cpp  AgentDrivers.cpp  AgentManager.cpp  App.cpp  ClaudeSessionDiscovery.cpp  D3D11Context.cpp  FolderPicker.cpp  ImGuiRuntime.cpp  JsonlActivityProbe.cpp  Logger.cpp  MainWindow.cpp  Sidebar.cpp  WaitingFlagWatcher.cpp  WindowsTerminalSpawner.cpp  agent.cpp  agent_manager.cpp  app.cpp  conpty.cpp  gui.cpp  input_detector.cpp  input_handler.cpp  main.cpp  renderer.cpp  terminal_buffer.cpp  vt_parser.cpp
tests/: CMakeLists.txt  test_agent_close.cpp  test_agent_driver.cpp  test_agent_manager.cpp  test_claude_session.cpp  test_jsonl_parsing.cpp  test_jsonl_probe.cpp
